--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nimble-Snapshots
 
+## 2.0.1
+
+* Disables bitcode – @ashfurrow
+
 ## 2.0.0
 
 * Name sanitizing, custom folders and more housekeeping - @colinta
