--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 # Nimble-Snapshots
 
-* 3.0.0
+## 3.0.1
+
+* Loosens dependency version. - @alesker
+
+## 3.0.0
 
 * Calls through to `drawViewHierarchyInRect` on every snapshot prior to snapshot being made – @ashfurrow
 
